<resources>
    <string name="app_name">Mi Hormiguero</string>
    <string name="mi_hormiguero">Mi Hormiguero</string>
    <string name="splash_description">Walker ant</string>
    <string name="op1Menu">Metas</string>
    <string name="op2Menu">Hormigas</string>
    <string name="op3Menu">Presupuesto</string>
    <string name="text_agregarM">Agregar meta</string>
    <string name="etNombreM">Ingrese el nombre de la meta</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvCategoria">Categoria</string>
    <string name="etMontoM">Ingrese el monto de su meta</string>
    <string name="tvCantidad">Cantidad</string>
    <string name="tv_fecha">Fecha fin</string>
    <string name="agrebtn">Agrebtn</string>
    <string name="meta">Meta:</string>
    <string name="porcentaje">Porcentaje:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="fecha">Fecha:</string>
    <string name="et_nombreI">Ingrese el nombre del ingreso</string>
    <string name="et_MontoI">Ingrese la cantidad de su ingreso</string>
    <string name="et_gastoI">Ingrese el nombre de su gasto</string>
    <string name="et_montoI">Ingrese el monto de su gasto</string>
    <string name="add_plantilla">Add plantilla</string>
    <string name="nombre_plantilla">nombre plantilla</string>
</resources>