<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".agregar_gasto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/text_agregarM"
        android:textColor="@color/color_text"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tvNombre"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_gastoI"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvCantidad"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tvCantidad"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_montoI"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/agrebtn"
        android:onClick="agregarGasto"
        android:src="@drawable/baseline_check_circle_24" />
</LinearLayout>